making user module perfect with swagger
