# backend/src/users/dto/update-user.dto.ts
@@ -1,16 +1,23 @@
-import { IsEmail, IsString, MinLength, MaxLength } from 'class-validator';
-import { ApiProperty } from '@nestjs/swagger';
+import { IsString, MinLength, MaxLength } from 'class-validator';
+import { ApiPropertyOptional } from '@nestjs/swagger';
 
 export class UpdateUserDto {
-  @ApiProperty({ example: 'john.doe@example.com' })
-  @IsEmail()
-  @MinLength(5)
-  @MaxLength(100)
-  email?: string;
-
-  @ApiProperty({ example: 'John Doe' })
+  @ApiPropertyOptional({ example: 'John Doe' })
   @IsString()
-  @MinLength(2)
-  @MaxLength(100)
   name?: string;
+
+  @ApiPropertyOptional()
+  @IsString()
+  timezone?: string;
+
+  @ApiPropertyOptional({ enum: ['12h', '24h'] })
+  timeFormat?: '12h' | '24h';
+
+  @ApiPropertyOptional()
+  @IsString()
+  language?: string;
+
+  @ApiPropertyOptional()
+  @IsString()
+  locale?: string;
 }
